# octobrain

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  INSTRUCTIONS.md  LICENSE  Makefile  README.md  server.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: .env.example  .gitignore  Makefile  README.md  requirements.txt
benches/adapters/: llm_client.py  longmemeval_run.py  octobrain_client.py
benches/docker/: Dockerfile  docker-compose.yml
benches/results/: README.md
benches/scripts/: entrypoint.sh  fetch_longmemeval.sh  run_longmemeval.sh  summarize_score.py
config-templates/: default.toml
scripts/: install-completions.sh  test-completions.sh
src/: arrow_helpers.rs  cli.rs  commands.rs  config.rs  constants.rs  embedding.rs  lib.rs  main.rs  sql.rs  storage.rs  vector_optimizer.rs
src/knowledge/: chunker.rs  content.rs  formatting.rs  manager.rs  mod.rs  store.rs  types.rs
src/mcp/: http.rs  knowledge.rs  logging.rs  memory.rs  mod.rs  rmcp_server.rs  server.rs  types.rs
src/memory/: auto_link_tests.rs  decay_tests.rs  formatting.rs  git_utils.rs  goal_tests.rs  hybrid_tests.rs  hyde_tests.rs  manager.rs  mod.rs  reranker_integration.rs  role_tests.rs  sleep_tests.rs  store.rs  types.rs
