[package]
name = "octobrain"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Muvon Un Limited <opensource@muvon.io>"]
description = "Standalone memory management system for AI context and conversation state"
homepage = "https://github.com/muvon/octobrain"
repository = "https://github.com/muvon/octobrain"
documentation = "https://docs.rs/octobrain"
license = "Apache-2.0"
keywords = ["ai", "memory", "semantic-search", "mcp-server", "context"]
categories = ["development-tools", "command-line-utilities", "database"]
readme = "README.md"
exclude = [
    "tests/fixtures/*",
    "examples/*",
    ".github/*",
    "docs/*",
    "scripts/*",
    "*.md",
    "!README.md"
]

[[bin]]
name = "octobrain"
path = "src/main.rs"
[features]
default = ["fastembed", "huggingface"]
fastembed = ["octolib/fastembed"]
huggingface = ["octolib/huggingface"]

[dependencies]
lancedb = { version = "0.23.1", default-features = false }
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "io-std", "process"] }
arrow = { version = "56.2.0", default-features = false, features = ["prettyprint"] }
arrow-array = { version = "56.2.0", default-features = false }
arrow-schema = { version = "56.2.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.43", default-features = false, features = ["serde", "clock"] }
anyhow = "1.0.100"
uuid = { version = "1.20", default-features = false, features = ["v4"] }
clap = { version = "4.5.57", features = ["derive"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
dirs = "6.0.0"
dotenvy = "0.15"
toml = "0.9.0"
sha2 = "0.10"
hex = "0.4"
html2text = "0.12"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
colored = "2.1"

# Local dep for testing
# octolib = { path = "../octolib", default-features = false }
octolib = { version = "0.8.1", default-features = false }
