[package]
name = "octobrain"
version = "0.7.0"
edition = "2021"
rust-version = "1.95"
authors = ["Muvon Un Limited <opensource@muvon.io>"]
description = "Standalone memory management system for AI context and conversation state"
homepage = "https://github.com/muvon/octobrain"
repository = "https://github.com/muvon/octobrain"
documentation = "https://docs.rs/octobrain"
license = "Apache-2.0"
keywords = ["ai", "memory", "semantic-search", "mcp-server", "context"]
categories = ["development-tools", "command-line-utilities", "database"]
readme = "README.md"
exclude = [
    "tests/fixtures/*",
    "examples/*",
    ".github/*",
    "docs/*",
    "scripts/*",
    "benches/*",
    ".docker-cache/*",
    "*.md",
    "!README.md"
]

[[bin]]
name = "octobrain"
path = "src/main.rs"
[features]
default = ["fastembed", "huggingface"]
fastembed = ["octolib/fastembed"]
huggingface = ["octolib/huggingface"]

[dependencies]
lancedb = { version = "0.26.2", default-features = false }
lance-index = "2.0.0"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "io-std", "process", "net"] }
arrow = { version = "57.3.0", default-features = false, features = ["prettyprint"] }
arrow-array = { version = "57.3.0", default-features = false }
arrow-schema = { version = "57.3.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", default-features = false, features = ["serde", "clock"] }
anyhow = "1.0.102"
uuid = { version = "1.23", default-features = false, features = ["v4"] }
clap = { version = "4.6.0", features = ["derive"] }
futures = { version = "0.3.32", default-features = false, features = ["std"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
dirs = "6.0.0"
dotenvy = "0.15"
toml = "1.1"
sha2 = "0.10"
hex = "0.4"
html2text = "0.16"
dom_smoothie = "0.16"
reqwest = { version = "0.13", features = ["rustls"], default-features = false }
colored = "3.1"
pdf-extract = "0.10"
zip = { version = "8.4", default-features = false, features = ["deflate"] }
quick-xml = "0.39"

# MCP SDK (official Rust SDK for Model Context Protocol)
rmcp = { version = "1.3.0", features = ["server", "transport-streamable-http-server", "transport-io", "macros"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
schemars = "1"
async-trait = "0.1"
http = "1"

regex = "1"

# Local dep for testing
# octolib = { path = "../octolib", default-features = false }
octolib = { version = "0.21.5", default-features = false }

# Replace esaxx-rs 0.1.10 (transitive: tokenizers/esaxx_fast → esaxx-rs/cpp).
# Upstream build.rs hardcodes cc::Build::static_crt(true), forcing /MT on
# Windows MSVC and producing LNK2038 RuntimeLibrary mismatches when linking
# with ort (pyke prebuilt onnxruntime, built /MD). Pinned by SHA so a
# force-push on the fork branch cannot silently flip our build.
# Upstream PR: https://github.com/Narsil/esaxx-rs/pull/19 (unmerged).
[patch.crates-io]
esaxx-rs = { git = "https://github.com/ocentra/esaxx-rs", rev = "4f4fd5acd624e43c770a0d198fcaa9d97bfd7f0b" }

# Optimized release profile for static linking
[profile.release]
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Reduce parallel code generation units for better optimization
panic = "abort"         # Abort on panic for smaller binary size
strip = true            # Strip symbols from binary
opt-level = "z"         # Optimize for speed
overflow-checks = false # Disable overflow checks in release mode
